<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".component.login.activity.UsernameLoginActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_outer"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <!--        因为要使得输入框右侧又删除图标，使用第三方控件-->
        <com.cielyang.android.clearableedittext.ClearableEditText
            android:id="@+id/username"
            style="@style/EditText.SingleLine.Border"
            android:layout_width="0dp"
            android:drawableStart="@drawable/input_username"
            android:hint="@string/enter_phone_or_email"
            app:clearIconDrawWhenFocused="true"
            app:clearIconDrawable="@drawable/close_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.cielyang.android.clearableedittext.ClearableEditText
            android:id="@+id/password"
            style="@style/EditText.SingleLine.Border"
            android:layout_width="0dp"
            android:drawableStart="@drawable/input_password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="15"
            app:clearIconDrawWhenFocused="true"
            app:clearIconDrawable="@drawable/close_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"

             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/primary"
            style="@style/SuperButton.Primary"
            android:text="@string/login"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_large"
            app:cornerRadius="@dimen/d27_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/register"
            android:background="@color/transparent"
            android:textColor="@color/black80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password"
            android:text="@string/forgot_password"
            android:background="@color/transparent"
            android:textColor="@color/black80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>